# ARCHER_hopper

./: .gitignore  .gitmodules  README.md  observations.txt
.devcontainer/: Dockerfile  (+1 more)
ControlStack/: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  hop.sh  plotting.m
ControlStack/auto_diff/: CMakeLists.txt  cpp_ad_interface.cpp
ControlStack/auto_diff/include/: auto_diff_types.h  cpp_ad_interface.h
ControlStack/bindings/: hopper.cpp
ControlStack/config/: gains.yaml  gains_hardware.yaml  planner_params.yaml
ControlStack/docs/: README.md
ControlStack/inc/: Controller.h  Controller_Hardware.h  Graph.h  Hopper.h  Integrator.h  MPC.h  NeuralGaitPolicy.h  Planner.h  Policy.h  Simulator.h  Trajectory.h  Types.h  UnitTest.h  UserInput.h  ZeroDynamicsPolicy.h  command.h  estimatedState.h  maze.hpp  pinocchio_wrapper.h  reduced_order_safety_filter.h  rom.h  ros_subscriber.hpp  utils.h  utils_hardware.h
ControlStack/inc/mpc/: mpc_interface.h
ControlStack/inc/nn/: nn_interface.h
ControlStack/inc/optitrack/: ot_interface.h
ControlStack/inc/pinocchio/: pinocchio_interface.h
ControlStack/launch/: hopper.launch
ControlStack/matlab/: ActuatorQuaternion.m  DataPlot.m  DataPlot_Sim.m  DataPlot_local.m  DataPlot_v2.m  DebugPlot.m  all_plot.m  debug_foot.m  estimation_analysis.m  impactTime.m  mazePlot.m  new_plotting.m  plot_positions.m
ControlStack/matlab/+yaml/: Examples.mlx  Null.m  Tests.m  dump.m  dumpFile.m  isNull.m  load.m  loadFile.m
ControlStack/python/: main.py  utils.py
ControlStack/rsc/: 3D_hopper.gv  hopper.urdf  hopper.xml  hopper_2.xml  hopper_v.xml
ControlStack/rsc/STLs/: `.mlp  foot.stl  staircase.stl  torso_reduced_reoriented.stl
ControlStack/src/: Animate.cpp  Controller.cpp  Controller_Hardware.cpp  Controller_Temp.cpp  Controller_Temp_Condensed.cpp  Graph.cpp  Hopper.cpp  Integrator.cpp  MPC.cpp  MpcSim.cpp  NeuralGaitPolicy.cpp  Planner.cpp  Policy.cpp  SimVisHardware.cpp  Simulator.cpp  TestBed.cpp  Trajectory.cpp  UnitTest.cpp  UserInput.cpp  ZeroDynamicsPolicy.cpp  command.cpp  mainMazeGen.cpp  pinocchio_wrapper.cpp  reduced_order_safety_filter.cpp  rom.cpp  ros_subscriber.cpp  testbed  tube_planning.py  utils.cpp  utils_hardware.cpp
ControlStack/src/mpc/: mpc_dummy.cpp  mpc_wrapper.cpp
ControlStack/src/nn/: nn_dummy.cpp  nn_wrapper.cpp
ControlStack/src/optitrack/: ot_dummy.cpp  ot_wrapper.cpp
ControlStack/src/pinocchio/: pinocchio_dummy.cpp  pinocchio_wrapper.cpp
ControlStack/tests/: CMakeLists.txt  test_timing.cpp  test_transforms.cpp
HardwareStack/: .gitignore  CMakeLists.txt  README.md
HardwareStack/inc/: Types.h
HardwareStack/lib/: teensy_to_teensy_testing.ino
HardwareStack/matlab/: ArduinoPlot.m  DataPlot.m  footGainTuning.m
HardwareStack/src/: EthernetTest  EthernetTest.cpp  Hopper.cpp  README.md
HardwareStack/src/ESP_8266/: ESP_8266.ino  README.md
HardwareStack/src/EthernetTeensy/: EthernetTeensy.ino
HardwareStack/src/EthernetTeensy/broadcast/: broadcast.ino
HardwareStack/src/EthernetTeensy/iperf/: iperf.ino
HardwareStack/src/FlywheelTeensy/: FlywheelTeensy.ino
HardwareStack/src/FlywheelTeensy/libraries/AmberEncoder/: Encoder.cpp  Encoder.h
HardwareStack/src/FlywheelTeensy/libraries/Archer_Config/: Archer_Config.h
HardwareStack/src/FlywheelTeensy/libraries/Bia/: Bia.cpp
HardwareStack/src/FlywheelTeensy/libraries/ControlBia/: ControlBia.cpp  ControlBia.h
HardwareStack/src/FlywheelTeensy/libraries/ControlKoios/: ControlKoios.h
HardwareStack/src/FootTeensy/: FootTeensy.ino
HardwareStack/src/libraries/Adafruit_NeoPixel/: Adafruit_NeoPixel.cpp
HardwareStack/src/libraries/AmberEncoder/: AmberEncoder.h
HardwareStack/src/libraries/Archer_Config/: Archer_Config.h
HardwareStack/src/libraries/ArxTypeTraits/: README.md  library.json  library.properties
HardwareStack/src/libraries/Bia/: Bia.cpp  Bia.h
HardwareStack/src/libraries/Bia_C/: Bia_C.cpp  Bia_C.h
HardwareStack/src/libraries/Bia_S/: Bia_S.cpp  Bia_S.h
HardwareStack/src/libraries/CPU/: CPU.cpp  CPU.h
HardwareStack/src/libraries/ControlBia/: ControlBia.cpp  ControlBia.h
HardwareStack/src/libraries/ControlKoios/: ControlKoios.cpp
HardwareStack/src/libraries/DogLcd/: keywords.txt
HardwareStack/src/libraries/DualENC/: DualENC.cpp  DualENC.h
HardwareStack/src/libraries/DualENC_1/: DualENC_1.h
HardwareStack/src/libraries/ELMO_CAN/: ELMO_CAN.cpp  ELMO_CAN.h
HardwareStack/src/libraries/ELMO_CANt4/: ELMO_CANt4.cpp  ELMO_CANt4.h
HardwareStack/src/libraries/ELMO_CANt4_v0/: ELMO_CANt4_v0.h
HardwareStack/src/libraries/Entropy/: Entropy.cpp
HardwareStack/src/libraries/FNET/: keywords.txt  library.properties  readme.txt
HardwareStack/src/libraries/FlexiTimer2/: library.properties
HardwareStack/src/libraries/FrequencyTimer2/: keywords.txt
HardwareStack/src/libraries/ILI9488_t3/: keywords.txt
HardwareStack/src/libraries/Koios/: Koios.cpp  Koios.h
HardwareStack/src/libraries/Koios_C/: Koios_C.h
HardwareStack/src/libraries/LedDisplay/: font5x7.h  library.properties
HardwareStack/src/libraries/LiquidCrystalFast/: keywords.txt
HardwareStack/src/libraries/LowPower/: LowPower.h
HardwareStack/src/libraries/Main_TBLin/: Main_TBLin.h
HardwareStack/src/libraries/NXPMotionSense/: NXPMotionSense.h
HardwareStack/src/libraries/NativeEthernet/: AUTHORS  keywords.txt  library.json  library.properties
HardwareStack/src/libraries/OSC/: OSCTiming.cpp
HardwareStack/src/libraries/PCBpixar/: PCBpixar.cpp  PCBpixar.h
HardwareStack/src/libraries/Ping/: Ping.cpp  Ping.h  keywords.txt
HardwareStack/src/libraries/RA8875/: RA8875.cpp
HardwareStack/src/libraries/Servo/: Servo.cpp
HardwareStack/src/libraries/SoftPWM/: SoftPWM.cpp
HardwareStack/src/libraries/TinyGPS/: Readme.md  TinyGPS.h
HardwareStack/src/libraries/Twitter/: Twitter.h
HardwareStack/src/libraries/UTFT/: DefaultFonts.c  UTFT.h  keywords.txt  version.txt
HardwareStack/src/libraries/i2c_t3/: i2c_t3.h
HardwareStack/src/libraries/ks0108/: ks0108.h  ks0108_Panel.h
HardwareStack/src/libraries/x10/: x10.cpp  x10.h
HardwareStack/src/test/: test.ino
(+302 files in other folders)
